Resolve PR comments: 1. Avoid Optional in method agrs. 2. Don't change the state of a class field in tests to avoid the order determination. 3.
Signed-off-by: ap891843 <aman.prashant@broadcom.com>